# samplex

./: .gitmodules  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
MXChip/AZ3166/: CMakeLists.txt  README.md
MXChip/AZ3166/app/: CMakeLists.txt
MXChip/AZ3166/app/mqtt/: cloud_config.h  main.c  mqtt_client.c  mqtt_client.h  telemetry.c  telemetry.h
MXChip/AZ3166/app/telemetry/: main.c  telemetry.c
MXChip/AZ3166/scripts/: build.ps1  build.sh  deploy.ps1  deploy.sh
